# omnidash

./: .gitignore  CHANGE_IMPACT_PLAYBOOK.md  LICENSE  MONOREPO.md  ONE_PAGER.md  OmniDash.md  README.md  package.json
Discord/: .gitignore  CLAUDE.md  DEPRECATED.md  README.md  docker-compose.dev.yml  env.gg-api.download  proxy-webshare.download
Discord/app/: Dockerfile.frontend  README.md  (+2 more)
TikTok/: DEPRECATED.md  SETUP.md  c2.service  deploy.sh  implementation_plan.md  task.md
docs/: CLOUD_PHONE_FINDINGS.md  OMNIBOX_MERGE_PLAN.html  OMNIBOX_MERGE_PLAN.md  OMNIBOX_OVERVIEW_PLAIN.html  OMNIBOX_STATUS.html  SECURITY_HARDENING.md
frontend/: README.md  index.html  package-lock.json  package.json
services/appeal-bot/: .env.example  .gitignore  ABSORBED.md  README.md  pyproject.toml
services/appeal-bot/docs/: c2-security-audit.html  telegram-portal-audit.html
services/appeal-bot/docs/superpowers/plans/: 2026-06-26-telegram-appeal-bot.md
services/appeal-bot/docs/superpowers/specs/: 2026-06-26-telegram-appeal-bot-design.md
services/appeal-bot/scripts/: audit_remote.py
services/appeal-bot/src/appeal_bot/: app.py  config.py  control_bot.py  models.py  notifier.py  orchestrator.py  parser.py  scheduler.py  session_provider.py  spambot_client.py  store.py  webhook.py
services/appeal-bot/tests/: test_app.py  test_config.py  test_control_bot.py  test_models.py  test_notifier.py  test_orchestrator.py  test_parser.py  test_response_adapter.py  test_scheduler.py  test_session_provider.py  test_spambot_client.py  test_store.py  test_webhook.py
transports/: README.md
(+442 files in other folders)
