[project]
name = "appeal-bot"
version = "0.1.0"
description = "Automate @SpamBot limit appeals for owned Telegram accounts"
requires-python = ">=3.11"
dependencies = [
    "telethon>=1.36",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "pytest-aiohttp>=1.1"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
